finalized project for report

--- a/public/index.html
+++ b/public/index.html
@@ -137,37 +137,14 @@
 
         <div class="chart-container">
             <div class="chart-header">
-                <h2>Energy & Power</h2>
+                <h2>Energy</h2>
                 <div class="chart-controls">
                     <button id="energy-chart-type" class="toggle-btn active" data-type="energy">Energy</button>
-                    <button id="power-chart-type" class="toggle-btn" data-type="power">Power</button>
                 </div>
             </div>
             <canvas id="energy-power-chart"></canvas>
         </div>
 
-        <div class="analysis-section">
-            <h2>Traffic Analysis</h2>
-            <div class="analysis-content">
-                <div class="analysis-stats">
-                    <div class="stat-item">
-                        <h3>Peak Traffic Time</h3>
-                        <p id="peak-traffic-time">--:--</p>
-                    </div>
-                    <div class="stat-item">
-                        <h3>Traffic Density</h3>
-                        <p id="traffic-density">Low</p>
-                    </div>
-                    <div class="stat-item">
-                        <h3>Energy Efficiency</h3>
-                        <p id="energy-efficiency">Normal</p>
-                    </div>
-                </div>
-                <div class="traffic-chart-container">
-                    <canvas id="traffic-chart"></canvas>
-                </div>
-            </div>
-        </div>
     </main>
 
     <script src="script.js"></script>
