--- a/public/index.html
+++ b/public/index.html
@@ -34,24 +34,13 @@
             </div>
             
             <div class="widget">
-                <div class="widget-icon" id="pass-count-icon">
-                    <!-- Icon will be inserted by JS -->
-                </div>
-                <div class="widget-content">
-                    <h2>Vehicle Pass Count</h2>
-                    <div class="widget-value" id="pass-count-value">0</div>
-                    <div class="widget-unit">passes</div>
-                </div>
-            </div>
-            
-            <div class="widget">
                 <div class="widget-icon" id="energy-icon">
                     <!-- Icon will be inserted by JS -->
                 </div>
                 <div class="widget-content">
                     <h2>Energy</h2>
-                    <div class="widget-value" id="energy-value">0.0000</div>
-                    <div class="widget-unit">Joules</div>
+                    <div class="widget-value" id="energy-value">0</div>
+                    <div class="widget-unit">μJ</div>
                 </div>
             </div>
         </div>
